--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -47,7 +47,7 @@
 #### [ 中俄无上限友谊要触顶？白宫对普习会表态](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825739.md)
 #### [ 惊人发现 3万年前人类可实施精湛截肢手术](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13824767.md)
 #### [ 济宁人没饭吃上央视求援被抓 官方却包豪华宾馆办公](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654161.md)
+#### [ 外界关注中共二十大中央军委人事安排(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016740.md)
+#### [ 【热门话题】普京挖坑让习跳？/张文宏讲话视频再度热传](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103528837.md)
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
 #### [ 孙力军的“政治团伙”中背后都有哪些人？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999183.md)
-#### [ 【热门话题】普京挖坑让习跳？/张文宏讲话视频再度热传](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103528837.md)
-#### [ 栗战书视频在社媒流传 讲了些新华社没说的话](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc418/n13825140.md)
