同步于: 9月17日3时51分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,9 +1,9 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
 #### [ 习近平前脚刚踏出国门 后院“起火”了？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016810.md)
 #### [ 【内幕】刘亚洲代表核心太子党与习近平决裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/993813.md)
-#### [ 习近平抵达哈萨克斯坦 中亚之行要做三件事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016677.md)
-#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 二十大总理争夺战 汪洋遭狙击？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016816.md)
+#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 习近平抵达哈萨克斯坦 中亚之行要做三件事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016677.md)
 #### [ 外界关注中共二十大中央军委人事安排(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016740.md)
 #### [ 物伤其类！美国这一决定 中共为何如此关心？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016811.md)
 #### [ 李克强变了？分析：低调地不透露经济实情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016682.md)
@@ -17,20 +17,20 @@
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 李克强二十大后出访柬埔寨？外界竞猜其去向](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654338.md)
 #### [ 台媒：对习近平威胁不大 汪洋或接班李克强(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016586.md)
+#### [ 出于防疫考量 习近平拒与普京等人晚宴(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016844.md)
 #### [ 分析：普习会谈场面冷清 中俄各有盘算](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13826004.md)
 #### [ 俄在乌战场上失利 普京“提着帽子”见习近平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825970.md)
 #### [ 网曝邓小平南巡讲话全文 改革开放成习李角力点](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825510.md)
 #### [ 见普京 习近平在俄乌问题上三缄其口](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13825949.md)
-#### [ 出于防疫考量 习近平拒与普京等人晚宴(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016844.md)
 #### [ 习近平睽违多年出访 刚下飞机“脚滑”画面曝光(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016771.md)
 #### [ 广州政法委原书记谢晓丹被双开 曾称“愿公开财产”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016672.md)
-#### [ 分析：普习会谈场面冷清 中俄各有盘算](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826004.md)
 #### [ 中共代表请求瞻仰女王灵柩 被英国议会拒绝](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826443.md)
+#### [ 分析：普习会谈场面冷清 中俄各有盘算](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826004.md)
 #### [ 【菁英论坛】中共真实军力 不过如此](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825926.md)
+#### [ 王友群：中共二十大前的善恶大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826020.md)
 #### [ 章天亮: 中央军委大换血 王沪宁修改党章](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654332.md)
 #### [ 成都解封消息又被提前“暴雷”市长大怒疑曝光(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016779.md)
 #### [ 【远见快评】习旧文新发释信号 习普会谈啥？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826083.md)
-#### [ 王友群：中共二十大前的善恶大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826020.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ “习普会”气氛尴尬 普京紧盯习近平 习眼神躲闪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529525.md)
 #### [ 清华教授劳东燕微博全部清空 疑遭噤声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826314.md)
@@ -47,7 +47,7 @@
 #### [ 【财商天下】三年不出门天下已变 习中亚之行用意何在](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825946.md)
 #### [ 【禁闻】栗战书讲话视频曝光 中共策应俄军攻乌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529005.md)
 #### [ 【禁闻】习近平二十大前出访 学者解析原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529002.md)
+#### [ 习近平缺席上合峰会晚宴 消息人士：担心疫情](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529701.md)
 #### [ 传中共二十大后李克强访问柬埔寨](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529449.md)
 #### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
-#### [ 中共二十大非常特殊 资深媒体人曝两份常委名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/653930.md)
-#### [ 习近平缺席上合峰会晚宴 消息人士：担心疫情](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529701.md)
+#### [ 【热门话题】“习普会”气氛尴尬/习缺席上合峰会晚宴](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529689.md)
