同步于: 9月17日15时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -13,8 +13,8 @@
 #### [ 【秦鹏直播】习普会 普京怒目？习近平躲闪其辞](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826013.md)
 #### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
 #### [ 习稳控“枪杆子” 新军委人选即将揭幕？涉兵变传言一人去向不明](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654380.md)
-#### [ 习近平对军队不放心 二十大新军委谁上谁下？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016649.md)
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
+#### [ 习近平对军队不放心 二十大新军委谁上谁下？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016649.md)
 #### [ 李克强二十大后出访柬埔寨？外界竞猜其去向](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654338.md)
 #### [ 中共代表请求瞻仰女王灵柩 被英国议会拒绝](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826443.md)
 #### [ 【中国观察】中共总理争夺战 汪洋遭暗算？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825615.md)
@@ -25,13 +25,13 @@
 #### [ 网曝邓小平南巡讲话全文 改革开放成习李角力点](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825510.md)
 #### [ 见普京 习近平在俄乌问题上三缄其口](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13825949.md)
 #### [ 王友群：中共二十大前的善恶大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826020.md)
-#### [ 【菁英论坛】中共真实军力 不过如此](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825926.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
+#### [ 【菁英论坛】中共真实军力 不过如此](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825926.md)
 #### [ 分析：普习会谈场面冷清 中俄各有盘算](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826004.md)
+#### [ 习2023让出主席？专家：一大挫败导致他不能一统江山](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654587.md)
 #### [ 章天亮: 中央军委大换血 王沪宁修改党章](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654332.md)
 #### [ 习近平缺席上合峰会领袖晚宴 舆论翻车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826772.md)
 #### [ 广州政法委原书记谢晓丹被双开 曾称“愿公开财产”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016672.md)
-#### [ 习2023让出主席？专家：一大挫败导致他不能一统江山](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654587.md)
 #### [ “习普会”气氛尴尬 普京紧盯习近平 习眼神躲闪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529525.md)
 #### [ 【远见快评】习旧文新发释信号 习普会谈啥？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826083.md)
 #### [ 清华教授劳东燕微博全部清空 疑遭噤声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826314.md)
@@ -41,13 +41,13 @@
 #### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
 #### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 章天亮: 党章几处重大修改 李克强只好低调躺平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654626.md)
+#### [ 习近平抵达中亚行第一站 外界关注他对哈萨克的影响(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016715.md)
 #### [ 长沙电信大楼火灾 传楼内藏省纪委软禁官员场所](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826830.md)
 #### [ 普习吹捧互相支持 毛宁在记者会被一问题问住](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826785.md)
-#### [ 习近平抵达中亚行第一站 外界关注他对哈萨克的影响(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016715.md)
+#### [ 很少人知道！中共一个最大阴谋正接近成功(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016894.md)
 #### [ 湖北版“孙小果”保护伞曝光 包含军队官员](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826249.md)
 #### [ 普京习近平会晤 专家解读中俄各自声明](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13825984.md)
 #### [ 美报告：中共军方高层有致命伤 或步俄后尘](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826589.md)
 #### [ 王小洪查孙力军政治团伙 中共副总理韩正被牵出(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999389.md)
 #### [ 习党媒刊文大谈“革命”分析：加速中共崩溃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826493.md)
-#### [ “习普会”是为世界“注入稳定性”还是习被俄挟持 形势所迫？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654395.md)
-#### [ 很少人知道！中共一个最大阴谋正接近成功(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016894.md)
+#### [ 习近平再提“颜色革命” 重新集结反美势力 最大担心暴露无遗？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654665.md)
